-/c/_scss/main.scss
/* ... */
/*-------------------------------------------    
	Page Specific: Contact
-------------------------------------------*/

.dm-c-contactChunk {

	@include dm-u-paddingRight--xl;

	@media screen and (min-width: 760px) {
		@include dm-l-col--50;
	}

}



/*-------------------------------------------    
	If JS is available...
-------------------------------------------*/

.js {

	// original animation
	/*
	.dm-c-intro {
		opacity: 0;
	}

	.dm-c-preamble,
	.dm-c-preamble_tagline_term,
	.dm-c-preamble_name--dan,
	.dm-c-preamble_name--mall {
		clip-path: inset(0 100% 0 0);
	}

	.dm-c-preamble_dan {
		clip-path: inset(100% 10% 0 0);
	}

	.dm-c-preamble_name--dan,
	.dm-c-preamble_name--mall {
		-webkit-filter: none;
    	filter: none;
	}

	.dm-c-preamble_circle {
		transform: scale(0); // original = 0.7
	}

	.dm-c-testimonials {
		clip-path: inset(0 100% 0 0);
	}

	.dm-dp-quote,
	.dm-c-pricingDesign,
	&.dm-page--home .dm-c-articlesListWrap,
	&.dm-page--articles .dm-dp-textBlurb:nth-of-type(-n+20),
	&.dm-page--speakingPodcasts .dm-dp-textBlurb:nth-of-type(-n+20),
	&.dm-page--articleDetail .dm-c-pageHeader, 
	&.dm-page--articleDetail .dm-c-articleWell {
		opacity: 0;
	}

	.dm-c-pricingDesignContainer {
		clip-path: inset(0 100% 0 0);
	}

	.dm-c-articlesListWrap .dm-dp-boxedHeadline {
		clip-path: inset(0 100% 0 0);
	}



	.dm-j-mallShadow {
		-webkit-transition: filter 2s;
		transition: filter 2s;
		-webkit-filter: drop-shadow(-8px -8px 24px rgba(0, 0, 0, 0.2)) !important;
	    filter: drop-shadow(-8px -8px 24px rgba(0, 0, 0, 0.2)) !important;
	}

	.dm-j-eraseClipPath {
		clip-path: none !important;	
	}

	*/


	.dm-j-preambleShield {
		@include dm-u-pos--absolute;

		// improvisations
		width: 100%;
		height: 100%;
		top: 0;
		right: 0;
		background: white;

	}


	.dm-c-testimonials {
		background: none;
	}

	.dm-j-testimonialsShield {
		@include dm-u-pos--absolute;

		// improvisations
		width: 0;
		height: 100%;
		top: 0;
		left: 0;
		background: $ecru;
	}

	&.dm-page--articles .dm-dp-textBlurb:nth-of-type(-n+20),
	&.dm-page--speakingPodcasts .dm-dp-textBlurb:nth-of-type(-n+20) {
		opacity: 0;
	}


}

